# aoe4-stat-crawler-

./: .gitignore  README.md
.github/workflows/: api_build.yml  api_build_docker.yml  rest_api_build.yml  rust.yml  test.yml
api/: .env  Cargo.toml  Dockerfile  build.rs  docker-compose.yml  sqlx-data.json
api/proto/: Player.proto
api/src/: db.rs  main.rs
api/src/proto_build/: player.rs
api/src/services/: player.rs
crawler/: .env  Cargo.toml  sqlx-data.json
crawler/config/: log4rs.yml
crawler/db/: docker-compose.yaml  docker_compose.yaml
crawler/db_shema/: db.insert.sql  db.rev.sql  db.sql
crawler/migrations/: 20211103143832_int.down.sql  20211103143832_int.up.sql
crawler/src/: main.rs
crawler/src/actor/: CrawlerActor.rs  mod.rs
crawler/src/model/: Leaderboard.rs  Request.rs  db.rs  leaderboard.rs  mod.rs
model/: Cargo.toml
model/src/model/: db.rs  request.rs
rest_api/: .env  Cargo.toml  Dockerfile  sqlx-data.json
rest_api/config/: log4rs.yml
rest_api/src/: db.rs  main.rs
rest_api/src/services/: player.rs
