[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
model = {path="../model"}
dotenv = "0.15.0"
tonic = "0.6"
prost = "0.9"
anyhow = "1.0"
rand = "0.8.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.3.0"
itertools = "0.10.1"
tokio-stream = "0.1.7"
uuid = "0.8.2"
actix = "0.12.0"
actix-rt = "2.2"
local-ip-address = "0.4.4"
log = "0.4.14"
log4rs = {version = "1.0.0", features = [ "default" ]}
time = { version = "0.3.4" ,features = ["formatting"]}
sqlx = { version = "0.5.9", features = [ "runtime-tokio-native-tls","migrate","postgres","macros","uuid","time","tls","offline"] }
serde = "1.0.130"
serde_json = "1.0.68"
[build-dependencies]
tonic-build = "0.6"
