[package]
name = "crawler"
version = "0.1.0"
authors = ["Stefan <hoef.stef@pm.me>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
prost = "0.8"
anyhow = "1.0.44"
clap = "2.33.3"
rand = "0.8.4"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
lazy_static = "1.3.0"
itertools = "0.10.1"
tokio-stream = "0.1.7"
rusqlite = "0.25.3"
uuid = "0.8.2"
actix = "0.12.0"
actix-rt = "2.2"
local-ip-address = "0.4.4"
log = "0.4.14"
log4rs = {version = "1.0.0", features = [ "default" ]}
reqwest = {version = "0.11.6", features = ["json"]}
serde = "1.0.130"
serde_json = "1.0.68"
serde_repr = "0.1.7"