[package]
name = "model"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = { version = "0.3.4" ,features = ["formatting","parsing","serde"]}
sqlx = { version = "0.5.9", features = [ "macros","uuid","time"] }
serde = "1.0.130"
serde_json = "1.0.68"
serde_repr = "0.1.7"
uuid = {version = "0.8.2", features = ["v4","serde"]}
anyhow = "1.0.45"